--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.ignoreWords": ["best", "frienz", "js", "petfinder"]
+  "cSpell.ignoreWords": ["best", "frienz", "js", "petfinder", "webfonts"]
 }
