successfully revieving data from petfinder api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.ignoreWords": ["best", "frienz", "js", "petfinder", "webfonts"]
+  "cSpell.ignoreWords": [
+    "bernedoodle",
+    "best",
+    "frienz",
+    "js",
+    "petfinder",
+    "webfonts"
+  ]
 }
